Fixed too high padding-right for div#header

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -12,7 +12,7 @@ a:hover { text-decoration:underline; }
 a:hover, a:active { color:#2A5685; }
 
 #header, #top-menu { margin:0; }
-#header { background:/*#79B51C*/#9CC90E url(../images/logo.png) no-repeat 10px 50%; padding:8px 8px 0 108px; height:70px; }
+#header { background:/*#79B51C*/#9CC90E url(../images/logo.png) no-repeat 10px 50%; padding:8px 4px 0 108px; height:70px; }
 #header h1 { margin:0; }	
 #header #quick-search { margin:4px; }
 #top-menu { background-color:#6CA30A; font-size:10px; position:relative; padding:0; height:21px }
